static/main.css
.soft{
    background-color: aliceblue;
}
#buttons {
    text-align: center;
}

#hello_div{
    padding-top:  10px;
    padding-bottom:  10px;
    color: navy;
}

#feedback {
    color: navy;
    text-align: center;
}
#lesson-title{
    color: navy;
}

#linkToQuiz {
    font-size: 25px;
    margin: auto;
}

#quiz_progress {
    color: navy;
    text-align: center;
}

.col-md-4 {
    text-align: center;
}

.col-md-12 {
    text-align: center;
}

.warn{
    color: navy;
}

.next_button{
    margin-top: 10px;
    margin-right: 10px;
    background-color: navy;
    color: white;

}
#navbar-title{
    color: navy;
}
#lesson-title{
    color: navy;
}

.title{
    font-size: 140px;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    color: rgb(81, 81, 81);
    margin-top: 80px;
    margin-bottom: 40px;
    margin-left: 200px;
}

.title2{
    font-size: 70px;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    color: rgb(81, 81, 81);
    margin-top: 80px;
    margin-bottom: 40px;
    margin-left: 10px;
}

.learn{
    color: navy;
}

.card{
    background-color: rgb(241, 243, 245);
    border-radius: 10%;
    border-top: 10%;
    height:fit-content;
    size: 70%;
}

.card-img-top{
    width: 100%;
    border-radius: 15%;
}

.asl{
    width:90%;
    margin-left: 40px;
    background-color: be;
}
.card-text{
    color: rgb(90, 90, 90);
}

.card-title{
    color: rgb(90, 90, 90);
    text-align: center;
}

.col-md-12 {
    text-align: center;
}

.stat{
    position: static;
    margin-top: 50px;
}

button{
    margin-top: 10px;
    margin-right: 10px;
    background-color: navy;
    color: white;
    border-radius: 0.25rem;
    border: 1px solid transparent;
    padding: 0.375rem 0.75rem;
    transition: 0.3s;
}

button:hover {
    color: rgb(137, 137, 137);
}


h1 {
    color: navy;
    text-align: center;
}

h2 {
    color: navy;
    font-size: xx-large;
    text-align: center;
}

.stretched-link::after{
    z-index: 10;
}

.card1{
    background-color: navy;
    color: white;
    border-radius: 20%;
    font-size: 50px;
    margin-top: 10px;
}

.card1:hover {
    color: rgb(137, 137, 137);
}

